# ShellPilot

./: .gitignore  CHANGELOG.md  README.md  install.sh  main.py  models.json  pyproject.toml  requirements.txt  test_text.txt
.github/workflows/: ci.yml
docs/: ai-support.md  configuration.md  contributing.md  index.md  installation.md  keybindings.md  previews.md  roadmap.md
shellpilot/: TODO.md  __main__.py  config.py
shellpilot/ai/: config.py  engine.py  hardware.py  models.py  remote.py
shellpilot/core/: commands.py  fs_browser.py  git.py  search.py
shellpilot/ui/: action_menu.py  app.py  app.tcss  search_bar.py  settings.py  widgets.py
shellpilot/utils/: log_highlighter.py  ls_colors.py  preview.py  shell.py
